--- a/src/ChatApp/wwwroot/templates/room/modal-room-form.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-room-form.html
@@ -27,6 +27,6 @@
     <div class="form-group">
         <button type="submit" class="btn btn-default"
             ng-disabled="CreateRoomForm.$invalid || !CreateRoomForm.$dirty">{{ctrl.doRoomLabel}}する</button>
-        <button type="button" class="btn btn-cancel" ng-click="ctrl.close()">キャンセル</button>
+        <button type="button" class="btn btn-default" ng-click="ctrl.close()">キャンセル</button>
     </div>
 </from>
