--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
@@ -16,9 +16,9 @@
     </h4>
     <div class="media-list">
         <div class="media" ng-repeat="r in c.rooms"
-            ng-class="{active: c.room == r}"
-            ng-click="RoomCtrl.SelectRoom(r)">
-            <div class="media-left media-middle">
+            ng-class="{active: c.room == r}">
+            <div class="media-left media-middle"
+                ng-click="RoomCtrl.SelectRoom(r)">
                 <span class="img-thumbnail">
                     <img class="img-rounded" ng-src="/ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
                 </span>
@@ -27,16 +27,16 @@
                 <div class="media-footer">
                     <span class="pull-right" uib-dropdown dropdown-append-to-body>
                         <a class="glyphicon glyphicon-option-horizontal toggle-tooltip"
-                            uib-dropdown-toggle></a>
+                            uib-dropdown-toggle href="javascript:void(0)"></a>
                         <ul class="dropdown-menu" uib-dropdown-menu role="menu">
                             <li role="menuitem">
-                                <a href="javascript:void(0)">
+                                <a ng-click="RoomCtrl.OpenDetailRoom(r)">
                                     <span class="glyphicon glyphicon-list-alt"></span>
                                     <span>ルームの詳細</span>
                                 </a>
                             </li>
                             <li role="menuitem" ng-show="r.isAdmin">
-                                <a ng-click="RoomCtrl.OpenEditRoom()">
+                                <a ng-click="RoomCtrl.OpenEditRoom(r)">
                                     <span class="glyphicon glyphicon-edit"></span>
                                     <span>ルームの編集</span>
                                 </a>
@@ -44,7 +44,7 @@
                         </ul>
                     </span>
                 </div>
-                <p ng-bind="r.name"></p>
+                <p ng-bind="r.name" ng-click="RoomCtrl.SelectRoom(r)"></p>
             </div>
         </div>
     </div>
