--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
@@ -1,6 +1,6 @@
 <div class="chat-sidebar-item chat-sidebar-item-members">
     <h4 class="title">
-        <span>メンバ</span>
+        <span>メンバー</span>
         <span class="pull-right small" uib-dropdown dropdown-append-to-body
             ng-show="c.room.isAdmin">
             <a class="glyphicon glyphicon-align-justify toggle-tooltip"
