--- a/src/ChatApp/wwwdev/less/room/main.less
+++ b/src/ChatApp/wwwdev/less/room/main.less
@@ -59,6 +59,7 @@ li {
         background: #fff;
         left: 0;
         border-right: 1px solid #eee;
+        font-size: 0.8em;
 
         .chat-sidebar-content {
             padding-bottom: 10px;
@@ -84,10 +85,15 @@ li {
             .media-list {
                 .toggle-tooltip {
                     opacity: 0.4;
+                    visibility: hidden;
+                    &:hover {
+                        opacity: 0.8;
+                    }
                 }
 
                 .media {
-                    padding: 3px;
+                    padding: 3px 2px;
+                    margin-top: 2px;
                 }
             }
         }
@@ -95,16 +101,31 @@ li {
         .chat-sidebar-item-rooms {
             .media {
                 margin: 0;
-                cursor: pointer;
+
+                .media-left, .media-body {
+                    cursor: pointer;
+                }
+
+                p {
+                    min-height: 30px;
+                    margin-bottom: 0;
+                }
 
                 &.active {
-                    background: rgba(200, 200, 200, 0.2);
+                    background: rgba(220, 220, 220, 0.2);
                     cursor: default;
 
                     .toggle-tooltip {
                         opacity: 1;
                         visibility: visible;
-                    }    
+                        &:hover {
+                            opacity: 0.8;
+                        }
+                    }
+                }
+
+                p {
+                    word-break: break-all;
                 }
             }
         }
