--- a/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">メニュー/span>
+                <span class="sr-only">メニュー</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
