--- a/src/ChatApp/Features/Room/Views/_RoomScriptsPartial.cshtml
+++ b/src/ChatApp/Features/Room/Views/_RoomScriptsPartial.cshtml
@@ -3,7 +3,7 @@
     <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="~/lib/marked/lib/marked.js"></script>
     <script src="~/lib/angular-marked/dist/angular-marked.js"></script>
-    <script src="~/js/room/app.min.js"></script>
+    <script src="~/js/room/app.js"></script>
     <script src="~/js/room/directives.js"></script>
     <script src="~/js/room/services.js"></script>
     <script src="~/js/room/controllers.js"></script>
