--- a/src/ChatApp/wwwroot/templates/room/modal-members-list.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-members-list.html
@@ -4,7 +4,7 @@
             <div class="media-left media-middle">
                 <span>
                     <img class="img-circle" width="30" height="30"
-                        ng-src="/UserAvatar/Get/{{ m.id }}" />
+                        ng-src="../UserAvatar/Get/{{ m.id }}" />
                 </span>
             </div>
             <div class="media-body">
