--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
@@ -25,7 +25,7 @@
         <div class="media" ng-repeat="m in c.room.members">
             <div class="media-left">
                 <img class="img-circle" width="20" height="20"
-                        ng-src="/UserAvatar/Get/{{ m.id }}" />
+                        ng-src="../UserAvatar/Get/{{ m.id }}" />
             </div>
             <div class="media-body">
                 <span ng-bind="m.firstName"></span>
