--- a/src/ChatApp/Features/Room/Views/Index.cshtml
+++ b/src/ChatApp/Features/Room/Views/Index.cshtml
@@ -1,7 +1,7 @@
 <div>
     <div chat-sidebar="{sm:3, xs:7}" chat-prefix="chat-sidebar">
-        <div ng-include="'templates/room/sidebar-item-room.html'"></div>
-        <div ng-include="'templates/room/sidebar-item-member.html'"></div>
+        <div ng-include="'../templates/room/sidebar-item-room.html'"></div>
+        <div ng-include="'../templates/room/sidebar-item-member.html'"></div>
     </div>
     <div class="col-sm-9 col-sm-offset-3" id="chat-room-main"
         chat-prefix="chat-messages"
@@ -10,11 +10,11 @@
         chat-room-change="RoomCtrl.ChangeRoom()"
         old-messages="RoomCtrl.GetOldmessages()">
         <div class="row" id="chat-messages">
-            <div ng-include="'templates/room/chat-messages.html'"></div>
+            <div ng-include="'../templates/room/chat-messages.html'"></div>
         </div>
         <div class="row" id="chat-messages-form"
             ng-style="{visibility: c.room.message ? 'visible' : 'hidden'}">
-            <div ng-include="'templates/room/chat-messages-form.html'"></div>
+            <div ng-include="'../templates/room/chat-messages-form.html'"></div>
         </div>
     </div>
 </div>
