--- a/src/ChatApp/wwwroot/templates/room/modal-members-remove.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-members-remove.html
@@ -7,5 +7,5 @@
     </h3>
 </div>
 <div class="modal-body">
-    <div ng-include="'/templates/room/modal-members-list.html'"></div>
+    <div ng-include="'../templates/room/modal-members-list.html'"></div>
 </div>
