--- a/src/ChatApp/wwwroot/templates/room/modal-members-add.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-members-add.html
@@ -20,6 +20,6 @@
         </div>
     </div>
     <div style="padding:0 15px;">
-        <div ng-include="'/templates/room/modal-members-list.html'"></div>
+        <div ng-include="'../templates/room/modal-members-list.html'"></div>
     </div>
 </div>
