--- a/src/ChatApp/Features/Room/Views/_Layout.cshtml
+++ b/src/ChatApp/Features/Room/Views/_Layout.cshtml
@@ -7,6 +7,7 @@
     @await Html.PartialAsync("_StylesPartial")
     <link rel="stylesheet" href="~/lib/angular-bootstrap/ui-bootstrap-csp.css" />
     <link rel="stylesheet" href="~/css/room/main.css" />
+    <base href="@Url.Content("~/Room/")" />
 </head>
 <body>
     @await Html.PartialAsync("_NavbarPartial")
