--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
@@ -20,7 +20,7 @@
             <div class="media-left media-middle"
                 ng-click="RoomCtrl.SelectRoom(r)">
                 <span class="img-thumbnail">
-                    <img class="img-rounded" ng-src="/ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
+                    <img class="img-rounded" ng-src="../ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
                 </span>
             </div>
             <div class="media-body" ng-click="RoomCtrl.SelectRoom(r)">
