--- a/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
-                <span>CHAT</span>
+                <span>HOME</span>
             </a>
         </div>
         <div class="navbar-collapse collapse">
