--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -11,7 +11,8 @@
             <dt>アバター:</dt>
             <dd>
                 <div class="">
-                    <img src="@Url.UserAvatar(Model.Id)" class="img-thumbnail img-circle" />
+                    <img src="@Url.UserAvatar(Model.Id)" class="img-thumbnail img-circle"
+                        width="200" height="200" style="width:200px; height: 200px;" />
                 </div>
             </dd>
             <dt>メール:</dt>
@@ -34,30 +35,40 @@
                 @foreach (var ex in Model.ExternalLogins)
                 {
                     <div>
-                    @if (ex.CurrentLogin == null)
+                    @if (ex.IsLoggedIn)
                     {
-                        <form asp-controller="Manage" asp-action="LinkLogin" method="post" class="form-inline"
-                            style="display: inline;">
-                            <input type="hidden" asp-for="@ex.OtherLogin.AuthenticationScheme" name="provider"/>
-                            <a title="Log in using your @ex.ProviderName account" href="#"
-                                class="btn-bracketed"
-                                onclick="$(this).closest('form').submit()">追加</a>
+                        <form asp-controller="Manage" asp-action="RemoveLogin" method="post" class="form-inline"
+                            style="display:inline;">
+                            <input asp-for="@ex.LoginProvider" name="LoginProvider" type="hidden" />
+                            <input asp-for="@ex.ProviderKey" name="ProviderKey" type="hidden" />
+                            <a onclick="$(this).closest('form').submit(); return false;"
+                                class="btn-bracketed">削除</a>
                         </form>
                     }
                     else
                     {
-                        <form asp-controller="Manage" asp-action="RemoveLogin" method="post" class="form-inline"
-                            style="display:inline;">
-                            <input asp-for="@ex.CurrentLogin.LoginProvider" name="LoginProvider" type="hidden" />
-                            <input asp-for="@ex.CurrentLogin.ProviderKey" name="ProviderKey" type="hidden" />
-                            <a href="#" on onclick="$(this).closest('form').submit()"
-                                class="btn-bracketed">削除</a>
+                        <form asp-controller="Manage" asp-action="LinkLogin" method="post" class="form-inline"
+                            style="display: inline;">
+                            <input type="hidden" asp-for="@ex.LoginProvider" name="provider"/>
+                            <a title="Log in using your @ex.DisplayName account"
+                                onclick="$(this).closest('form').submit(); return false;"
+                                class="btn-bracketed">追加</a>
                         </form>
                     }
-                    <span>@(ex.ProviderName)でログイン</span>
+                    <span>@(ex.DisplayName)でログイン</span>
                     </div>
                 }
             </dd>
         </dl>
     </div>
 </div>
+
+@section styles
+{
+    <environment names="Development">
+        <link rel="stylesheet" type="text/css" href="~/css/manage/index.css"/>
+    </environment>
+    <environment names="Staging,Production">
+        <link rel="stylesheet" type="text/css" href="~/css/manage/index.min.css"/>
+    </environment>
+}
