--- a/src/ChatApp/Features/Room/Views/_Layout.cshtml
+++ b/src/ChatApp/Features/Room/Views/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="~/favicon.ico">
+    <link rel="shortcut icon" href="~/favicon.ico" />
     <title ng-bind="c.room.name + ' - ChatApp'"></title>
     @await Html.PartialAsync("_StylesPartial")
     <link rel="stylesheet" href="~/lib/angular-bootstrap/ui-bootstrap-csp.css" />
