--- a/src/ChatApp/Features/Shared/_Layout.cshtml
+++ b/src/ChatApp/Features/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="~/favicon.ico">
+    <link rel="shortcut icon" href="~/favicon.ico" />
     <title>@ViewData["Title"] - ChatApp</title>
     @await Html.PartialAsync("_StylesPartial")
     @RenderSection("styles", required: false)
