機能 #75 ローカライゼーション

--- a/src/ChatApp/Features/Account/Views/ForgotPassword.cshtml
+++ b/src/ChatApp/Features/Account/Views/ForgotPassword.cshtml
@@ -1,16 +1,13 @@
 @model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = Localizer["Forgot your password?"];
 }
 
 <h2>@ViewData["Title"]</h2>
-<p>
-    For more information on how to enable reset password please see this <a href="http://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
-</p>
 
 <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal"
     onsubmit="if (this.dataset('submited')) return false; this.data.submited = true; return true;">
-    <h4>Enter your email.</h4>
+    <h4>@Localizer["Enter your {0}.", @Html.DisplayNameFor(m => m.Email)]</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
@@ -22,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">@Localizer["Submit"]</button>
         </div>
     </div>
 </form>
