--- a/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_NavbarPartial.cshtml
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">メニュー</span>
+                <span class="sr-only">@Localizer["MENU"]</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
-                <span>HOME</span>
+                <span>@Localizer["HOME"]</span>
             </a>
         </div>
         <div class="navbar-collapse collapse">
