--- a/src/ChatApp/Features/Account/Views/ExternalLoginConfirmation.cshtml
+++ b/src/ChatApp/Features/Account/Views/ExternalLoginConfirmation.cshtml
@@ -1,7 +1,12 @@
 @model ExternalLoginConfirmationViewModel
 
+@{
+    ViewData["Title"] = Localizer["External Login Confirmation."];
+}
+
+<h2>@ViewData["Title"]</h2>
 <form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Associate your @ViewData["LoginProvider"] account.</h4>
+    <h4>@Localizer["Associate your {0} account.", @ViewData["LoginProvider"]]</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -28,7 +33,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-default">@Localizer["Register"]</button>
         </div>
     </div>
 </form>
