--- a/src/ChatApp/Features/Shared/_LoginPartial.cshtml
+++ b/src/ChatApp/Features/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                 </a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">LOGOUT</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">@Localizer["LOGOUT"]</button>
             </li>
         </ul>
     </form>
@@ -20,7 +20,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">REGISTER</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">LOGIN</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">@Localizer["REGISTER NEW"]</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">@Localizer["LOGIN"]</a></li>
     </ul>
 }
