--- a/src/ChatApp/Features/_ViewImports.cshtml
+++ b/src/ChatApp/Features/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 @using ChatApp
 @using ChatApp.Data
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.Localization
 @using static ChatApp.Helpers.UrlHelperExt
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IHtmlLocalizer<ChatApp.SharedResources.SharedResource> Localizer
