--- a/src/ChatApp/Features/Manage/Views/ChangePassword.cshtml
+++ b/src/ChatApp/Features/Manage/Views/ChangePassword.cshtml
@@ -1,12 +1,12 @@
 @model ChangePasswordViewModel
 @{
-    ViewData["Title"] = "Change Password";
+    ViewData["Title"] = Localizer["Change Password."];
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 
 <form asp-controller="Manage" asp-action="ChangePassword" method="post" class="form-horizontal">
-    <h4>Change Password Form</h4>
+    <h4>@Localizer["Change Password Form"]</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Change password</button>
+            <button type="submit" class="btn btn-default">@Localizer["Change password"]</button>
         </div>
     </div>
 </form>
