--- a/src/ChatApp/Features/Manage/Views/SetPassword.cshtml
+++ b/src/ChatApp/Features/Manage/Views/SetPassword.cshtml
@@ -1,15 +1,12 @@
 @model SetPasswordViewModel
 @{
-    ViewData["Title"] = "Set Password";
+    ViewData["Title"] = Localizer["Set Password."];
 }
 
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
+<h2>@ViewData["Title"]</h2>
+<p>@(Localizer["Add a local account so you can log in without an external login."])</p>
 
 <form asp-controller="Manage" asp-action="SetPassword" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Set your password</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
@@ -28,7 +25,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Set password</button>
+            <button type="submit" class="btn btn-default">@Localizer["Set password"]</button>
         </div>
     </div>
 </form>
