--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -10,8 +10,8 @@
         <dl class="dl-horizontal">
             <dt>@Localizer["Avatar"]</dt>
             <dd>
-                <div class="avatar">
-                    <img src="@Url.UserAvatar(Model.Id)" class="img-thumbnail img-circle"/>
+                <div class="avatar" data-toggle="modal" data-target="#imageClipModal">
+                    <img src="@Url.UserAvatar(Model.Id)" class="img-thumbnail img-circle" id="user-avater"/>
                 </div>
             </dd>
             <dt>@Localizer["Full Name"]</dt>
@@ -63,6 +63,33 @@
     </div>
 </div>
 
+<div class="modal fade" id="imageClipModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <p class="modal-title">@Localizer["Change avatar"]</p>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div>
+                        <span class="clip-image" id="image-clip">
+                            <img src="" />
+                        </span>
+                    </div>
+                </div>
+                <input type="range" id="zoomRange" tabindex="-1" />
+            </div>
+            <div class="modal-footer">
+                <div class="btn-group">
+                    <button class="btn btn-default" id="fileSelectButton">@Localizer["Select file"]</button>
+                    <button class="btn btn-default" id="drawImageButton">@Localizer["Submit"]</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section styles
 {
     <environment names="Development">
@@ -76,9 +103,10 @@
 @section scripts
 {
     <environment names="Development">
-        <script type="text/javascript" src="~/js/index.js"></script>
+        <script type="text/javascript" src="~/js/lib/imgCliper.js"></script>
+        <script type="text/javascript" src="~/js/manage/index.js"></script>
     </environment>
     <environment names="Staging,Production">
-        <script type="text/javascript" src="~/js/index.min.js"></script>
+        <script type="text/javascript" src="~/js/manage/index.min.js"></script>
     </environment>
 }
