機能 #7 ユーザの画像のアップロード機能を追加 ポスト先パスの修正

--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -63,7 +63,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="imageClipModal">
+<div class="modal fade" id="imageClipModal" data-upload-url="@Url.Content("~/UserAvatar/Upload")">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
