機能 #82 ユーザのアバター画像の仕組みの変更

--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -11,7 +11,7 @@
             <dt>@Localizer["Avatar"]</dt>
             <dd>
                 <div class="avatar" data-toggle="modal" data-target="#imageClipModal">
-                    <img src="@Url.UserAvatar(Model.Id)" class="img-thumbnail img-circle" id="user-avater"/>
+                    <img src="@Url.UserAvatar(Model.AvatarId)" class="img-thumbnail img-circle" id="user-avater"/>
                 </div>
             </dd>
             <dt>@Localizer["Full Name"]</dt>
