--- a/src/ChatApp/wwwroot/templates/room/chat-messages.html
+++ b/src/ChatApp/wwwroot/templates/room/chat-messages.html
@@ -3,7 +3,7 @@
         <div class="media-left">
             <span>
                 <img class="img-circle" width="30" height="30"
-                    ng-src="../UserAvatar/Get/{{ m.userId }}" />
+                    ng-src="../UserAvatar/Get/{{ m.avatarId }}" />
             </span>
         </div>
         <div class="media-body message-body">
