--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-member.html
@@ -1,10 +1,8 @@
 <div class="chat-sidebar-item chat-sidebar-item-members">
     <h4 class="title">
         <span>メンバー</span>
-        <span class="pull-right small" uib-dropdown dropdown-append-to-body
-            ng-show="c.room.isAdmin">
-            <a class="glyphicon glyphicon-align-justify toggle-tooltip"
-                uib-dropdown-toggle></a>
+        <span class="pull-right small" uib-dropdown dropdown-append-to-body ng-show="c.room.isAdmin">
+            <a class="glyphicon glyphicon-align-justify toggle-tooltip" uib-dropdown-toggle></a>
             <ul class="dropdown-menu" uib-dropdown-menu role="menu">
                 <li role="menuitem">
                     <a ng-click="RoomCtrl.OpenAddMember()">
@@ -19,13 +17,12 @@
                     </a>
                 </li>
             </ul>
-        </span>    
+        </span>
     </h4>
     <div class="media-list">
         <div class="media" ng-repeat="m in c.room.members">
             <div class="media-left">
-                <img class="img-circle" width="20" height="20"
-                        ng-src="../UserAvatar/Get/{{ m.id }}" />
+                <img class="img-circle" width="20" height="20" ng-src="../UserAvatar/Get/{{ m.avatarId }}" />
             </div>
             <div class="media-body">
                 <span ng-bind="m.firstName"></span>
