ライブラリ追加 bower install jquery.cookie.js --save

--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -103,10 +103,12 @@
 @section scripts
 {
     <environment names="Development">
+        <script type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
         <script type="text/javascript" src="~/js/lib/imgCliper.js"></script>
         <script type="text/javascript" src="~/js/manage/index.js"></script>
     </environment>
     <environment names="Staging,Production">
+        <script type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
         <script type="text/javascript" src="~/js/manage/index.min.js"></script>
     </environment>
 }
