--- a/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
+++ b/src/ChatApp/wwwroot/templates/room/sidebar-item-room.html
@@ -20,7 +20,7 @@
             <div class="media-left media-middle"
                 ng-click="RoomCtrl.SelectRoom(r)">
                 <span class="img-thumbnail">
-                    <img class="img-rounded" ng-src="../ChatRoomAvatar/Get/{{r.id}}" width="30" height="30" />
+                    <img class="img-rounded" ng-src="../ChatRoomAvatar/Get/{{r.avatarId}}" width="30" height="30" />
                 </span>
             </div>
             <div class="media-body" ng-click="RoomCtrl.SelectRoom(r)">
@@ -41,6 +41,12 @@
                             <a ng-click="RoomCtrl.OpenEditRoom(r)">
                                 <span class="glyphicon glyphicon-edit"></span>
                                 <span>ルームの編集</span>
+                            </a>
+                        </li>
+                        <li role="menuitem" ng-show="r.isAdmin">
+                            <a ng-click="RoomCtrl.OpenRoomImageEditDialog(r)">
+                                <span class="glyphicon glyphicon-picture"></span>
+                                <span>ルームの画像</span>
                             </a>
                         </li>
                         <li role="menuitem" ng-show="r.isAdmin">
