--- a/src/ChatApp/wwwroot/templates/room/modal-room-edit-image.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-room-edit-image.html
@@ -7,7 +7,7 @@
     </h3>
 </div>
 <div class="modal-body">
-    <div class="container-fluid">
+    <div class="container-fluid" style="text-align: center;">
         <div>
             <span class="clip-image" chat-image-cliper
                 c:ctrl="ctrl" c:assign="c"
@@ -16,11 +16,15 @@
                 <img src="" />
             </span>
         </div>
+        <div>
+            <input type="range" ng-change="ctrl.changeRange()"
+                ng-model="ctrl.c.range.val"
+                min="{{ ctrl.c.range.min }}"
+                max="{{ ctrl.c.range.max }}" tabindex="-1" />
+        </div>
     </div>
-    <input type="range" ng-change="ctrl.changeRange()"
-        ng-model="ctrl.c.range.val"
-        min="{{ ctrl.c.range.min }}"
-        max="{{ ctrl.c.range.max }}" tabindex="-1" />
-    <button class="btn btn-default" ng-click="ctrl.fileSelect()">ファイル選択</button>
-    <button class="btn btn-default" ng-click="ctrl.upload()" ng-disabled="ctrl.disableUpload()">送信する</button>
+    <div class="modal-footer" style="text-align: center;">
+        <button class="btn btn-default" ng-click="ctrl.fileSelect()">ファイル選択</button>
+        <button class="btn btn-default" ng-click="ctrl.upload()" ng-disabled="ctrl.disableUpload()">送信する</button>
+    </div>
 </div>
