機能 #86 画像はやはりJPEGではなくPNGに変更

--- a/src/ChatApp/wwwroot/templates/room/modal-room-edit-image.html
+++ b/src/ChatApp/wwwroot/templates/room/modal-room-edit-image.html
@@ -11,7 +11,7 @@
         <div>
             <span class="clip-image" chat-image-cliper
                 c:ctrl="ctrl" c:assign="c"
-                c:option="{zoomStep: 10, imageType: 'image/jpeg', imageQuality: 0.95}"
+                c:option="{zoomStep: 10, imageType: 'image/png'}"
                 style="display: inline-block; width: 250px; height:250px; border-radius: 10px; overflow: hidden;">
                 <img src="" />
             </span>
